force-app/main/default/objects/Activity/fields/Notification_Required_IT__c.field-meta.xml
<CustomField>
    <fullName>Notification_Required_IT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Notification Required (IT)</label>
    <type>Checkbox</type>
</CustomField>