force-app/main/default/objects/Activity/fields/Offboarding_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>Offboarding_UniqueKey__c</fullName>
    <label>Offboarding UniqueKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>