force-app/main/default/objects/Activity/fields/Onboarding_UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_UniqueKey__c</fullName>
    <label>Onboarding UniqueKey</label>
    <length>6</length>
    <type>Text</type>
</CustomField>