force-app/main/default/objects/Activity/fields/Requires_Navigation__c.field-meta.xml
<CustomField>
    <fullName>Requires_Navigation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Requires Navigation</label>
    <type>Checkbox</type>
</CustomField>